# aui-tts-piper

./: .gitignore  README.md  pyproject.toml
src/: aui_tts_piper.py
